[package]
name = "textdb"
version = "0.1.0"
edition = "2021"
description = "A high performance read only text database"
license = "MIT"
repository = "https://github.com/andy-thomason/textdb"

[features]
default = []
mmap = ["memmap2"]

[dependencies]
anyhow = "1.0.86"
memmap2 = { version = "0.9.4", optional = true }

[dev-dependencies]
tempfile = "3"
rand = "0.8.5"
